Primer commit desde VSC

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="carousel-item active">
                     <img src="assets/images/slide1.jpg" class="d-block w-100" alt="Slide 1">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Certeza</h5>
+                        <h5>Certeza siempre</h5>
                         <p>Trabajamos con plazos concretos y transparentes.</p>
                     </div>
                 </div>
