--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">Sobre Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#carousel">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#carousel">Directrices</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                 </ul>
             </div>
@@ -77,7 +77,7 @@
                 <div class="carousel-item active">
                     <img src="assets/images/slide1.jpg" class="d-block w-100" alt="Slide 1">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Certeza siempre</h5>
+                        <h5>Certeza</h5>
                         <p>Trabajamos con plazos concretos y transparentes.</p>
                     </div>
                 </div>
